# EtudeMoyenne

./: CMakeLists.txt  main.cpp  sqlite3ext.h
Classes/: Database.h  Enseignant.cpp  Enseignant.h  Etudiant.cpp  Etudiant.h  Groupe.cpp  Groupe.h  GroupeModule.cpp  GroupeModule.h  GroupleModule.cpp  GroupleModule.h  Matiere.cpp  Matiere.h  Note.cpp  Note.h  Personne.cpp  Personne.h  Tamachi
